fix(adminv2): #WB-383, scrollbar is not visible in search lightboxes

--- a/admin/src/main/ts/src/assets/admin.scss
+++ b/admin/src/main/ts/src/assets/admin.scss
@@ -1242,13 +1242,7 @@ ode-lightbox {
     ode-list {
       ul {
         max-height: 36vh;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
         overflow-y: scroll;
-
-        &::-webkit-scrollbar {
-          display: none;
-        }
       }
     }
   }
